--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-gameshop",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://stashhv.github.io/react-gameshop",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
